Talleres listas y eventos

--- a/sportclub.web/src/main/webapp/src/view/stadiumTemplates.html
+++ b/sportclub.web/src/main/webapp/src/view/stadiumTemplates.html
@@ -16,6 +16,7 @@
 		<td><%= htmlEncode(stadium.getDisplay('name')) %></td>
 		<td><%= htmlEncode(stadium.getDisplay('capacity')) %></td>
 		<td><%= htmlEncode(stadium.getDisplay('cityId')) %></td>
+                <td><a onclick="Backbone.trigger('<%= componentId %>-stadium-show-classification',{capacity:<%= htmlEncode(stadium.getDisplay('capacity')) %>}); return false;" >Ver clasificacion</a></td>
     <td>
     <% if(showEdit) {%>
     <a onclick="Backbone.trigger('<%= componentId %>-stadium-edit',{id:<%= stadium.id %>}); return false" >Edit</a> |
