--- a/sportclub.web/src/main/webapp/src/view/championShipTemplates.html
+++ b/sportclub.web/src/main/webapp/src/view/championShipTemplates.html
@@ -5,9 +5,9 @@
     <thead>
     <tr>
 		 <th>Nombre</th>
-		 <th>Fecha inicial</th>
-		 <th>Fecha final</th>
-    <th>Acciones</th>
+		 <th>Fecha Inicial</th>
+		 <th>Fecha Final</th>
+    <th>Actions</th>
     </tr>
     </thead>
     <tbody>
@@ -16,6 +16,7 @@
 		<td><%= htmlEncode(championShip.getDisplay('name')) %></td>
 		<td><%= htmlEncode(championShip.getDisplay('startDate')) %></td>
 		<td><%= htmlEncode(championShip.getDisplay('endDate')) %></td>
+                <td><a onclick="Backbone.trigger('<%= componentId %>-championShip-show-days',{startDate:'<%= htmlEncode(championShip.getDisplay('startDate')) %>',endDate:'<%= htmlEncode(championShip.getDisplay('endDate')) %>'}); return false;" >Ver duracion y costo</a></td>
     <td>
     <% if(showEdit) {%>
     <a onclick="Backbone.trigger('<%= componentId %>-championShip-edit',{id:<%= championShip.id %>}); return false" >Editar</a> |
@@ -39,19 +40,19 @@
     <% }%>
 		<div class="form-group" >
 		<label for="name">Nombre</label>
-    	<input type="text" class="form-control" id="name" name="name" placeholder="Ingrese un valor" value="<%= championShip.get('name') %>"/>	
+    	<input type="text" class="form-control" id="name" name="name" placeholder="Enter value" value="<%= championShip.get('name') %>"/>	
 		</div>
 		<div class="form-group" >
-			<label for="startDate">Fecha inicial</label>
-    		<input type="text" data-converter="date" data-date-format="dd/mm/yyyy" class="form-control" id="startDate"  name="startDate" placeholder="Ingrese un valor" />
+			<label for="startDate">Fecha Inicial</label>
+    		<input type="text" data-converter="date" data-date-format="dd/mm/yyyy" class="form-control" id="startDate"  name="startDate" placeholder="Enter value" />
     		<%= '<scr'+'ipt>' %>
         	$('#startDate').datepicker({autoclose:true});
         	$('#startDate').datepicker('setDate',App.Utils.Converter.date.toDate("<%= championShip.get('startDate') %>"));
     		<%= '</scr'+'ipt>' %>
 		</div>
 		<div class="form-group" >
-			<label for="endDate">Fecha final</label>
-    		<input type="text" data-converter="date" data-date-format="dd/mm/yyyy" class="form-control" id="endDate"  name="endDate" placeholder="Ingrese un valor" />
+			<label for="endDate">Fecha Final</label>
+    		<input type="text" data-converter="date" data-date-format="dd/mm/yyyy" class="form-control" id="endDate"  name="endDate" placeholder="Enter value" />
     		<%= '<scr'+'ipt>' %>
         	$('#endDate').datepicker({autoclose:true});
         	$('#endDate').datepicker('setDate',App.Utils.Converter.date.toDate("<%= championShip.get('endDate') %>"));
